Styled Rooms Page
Styled the rooms page and also changed the css grid so everything will fit better.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <title>Welcome to The Couples Resort</title>
 </head>
-    <body>
+    <body id="mobile-outline">
         <h1 class="hidden">Welcome to The Couples Resort</h1>
         <!-- Main Nav -->         
             <header class="grid-con" id="main-header">
@@ -23,7 +23,7 @@
                     <div id="burger-con">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Rooms</a></li>
+                            <li><a href="rooms.html">Rooms</a></li>
                             <li><a href="#">Packages</a></li>
                             <li><a href="#">Dining</a></li>
                             <li><a href="#">Spa Activites</a></li>
