--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
 
                 <form action="#" method="post" enctype="text/plain">
-                    <input name="fullName" type="text" required placeholder="First & Last Name">
-                    <input name="contactInfo" type="text" required placeholder="Phone number or Email">
+                    <input name="fullName" type="text" required placeholder="First & Last Name"><span></span>
+                    <input name="contactInfo" type="text" required placeholder="Phone number or Email"><span></span>
                     <textarea name="msg" placeholder="Enter your questions, comments or concerns here..."></textarea>
                     <input name="submit" type="submit" value="Send">
                 </form>
