--- a/dining.html
+++ b/dining.html
@@ -212,7 +212,7 @@
 
                         <p>Discover the meticulous craftsmanship and innovation that define his culinary philosophy, as each dish becomes a canvas for his creativity.</p>
 
-                        <p>oin us in savoring the essence of Chef Ronnie’s gastronomic brilliance, where every bite is a testament to his culinary expertise and unwavering commitment to delighting the palate</p>
+                        <p>Join us in savoring the essence of Chef Ronnie’s gastronomic brilliance, where every bite is a testament to his culinary expertise and unwavering commitment to delighting the palate</p>
                         </article>
                     
                     </div>
@@ -294,28 +294,29 @@
 
         <!--Dining Hours/Dress Code-->
 
-        <div id="faq-con" class="grid-con">
+            <div id="faq-con" class="grid-con">
                 <div class="col-span-full">
                     <h2><span>Couples Resort</span><br>Dining Hours & Dress Code</h2>
                 </div>
-                <section class="col-span-full faq-items">
-                    <h2>Dinings Hours and Dress Code Info</h2>
-                    <div id="faq-text-con">
-                        <div id="faq-list-group1">
-                            <ul>
-                                <li><a href="#">Breakfast Room Service - 8:00am to 10:30am</a></li>
-                                <li><a href="#">Lunch Menu - Extra charge. Daily from 12:00 - 4:00 pm.</a></li>                               
-                                <li><a href="#">Patio Service - Lunch only (12:00 - 4:00pm)</a></li>
-                                <li><a href="#">Dining Room - 6:00pm to 8:00pm (9:00pm Fridays)</a></li>
-                                <li><a href="#">Reserve Table and Place Order Between 12pm - 5pm.</a></li>
-                                <li><a href="#">Drinks - 11am</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
+                    <section class="col-span-full faq-items line-separator">
+                <div id="faq-text-con">
+                    <div id="faq-list-group1">
+                        <ul>
+                            <li>Breakfast Room Service - 8:00am to 10:30am</li>
+                            <li>Lunch Menu - Extra charge. Daily from 12:00 - 4:00 pm.</li>                               
+                            <li>Patio Service - Lunch only (12:00 - 4:00pm)</li>
+                            <li>Dining Room - 6:00pm to 8:00pm (9:00pm Fridays)</li>
+                            <li>Reserve Table and Place Order Between 12pm - 5pm.</li>
+                            <li>Drinks - 11am</li>
+                            <li>Indoor Lunch Dress Code - No Dress Code</li>
+                            <li>Patio Lunch Dress Code - Weather Appropriate</li>
+                            <li>Dinner Dress Code - Dress Formal</li>
 
-      
-        </div>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            </section>
 
         <!--Contact-->
         <section id="contact-hero-con" class="grid-con">
@@ -337,7 +338,7 @@
                 <h3 class="hidden">Phone, Fax and Email</h3>
                 <p>Toll Free:+1 877 201-1156<br>
                     FAX:+1 613 638 2217<br>
-                    E-mail: info[at]coupleresort.com </p>         
+                    E-mail: info@coupleresort.com </p>         
             </div>
             <div id="contact-hero-form" class="col-span-full">
 
