--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <section class="col-span-full faq-items">
                     <h3>Dining Hours &amp; Dress Code</h3>
                 </section>
-                <section class="col-span-full faq-items">
+               <section class="col-span-full faq-items">
                     <h3>Amenities In-room</h3>
                     <div id="faq-text-con">
                         <div id="faq-list-group1">
@@ -182,7 +182,7 @@
                                 <li><a href="#">Fibre-Optic Internet - Free WIFI 50 inch Television</a></li>
                                 <li><a href="#">Free - Netflix Video Streaming</a></li>
                                 <li><a href="#">Walkout Spacious Lakeside Balcony</a></li>
-                                <li><a href="#">European Shower (2 or more heads)</a></li>
+                                 <li><a href="#">European Shower (2 or more heads)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                 <h3 class="hidden">Phone, Fax and Email</h3>
                 <p>Toll Free:+1 877 201-1156<br>
                     FAX:+1 613 638 2217<br>
-                    E-mail: info[at]coupleresort.com </p>         
+                    E-mail: info@coupleresort.com </p>         
             </div>
             <div id="contact-hero-form" class="col-span-full">
 
